# Qt-Qml-Dashboard

./: CMakeLists.txt  Images.qrc  Main.qml  README.md  Rain.qml  Wind.qml  controller.cpp  controller.h  main.cpp
